# FRAM_QML

./: .gitignore  .gitignore.txt  CMakeLists.txt  LICENSE  attendhistorydto.cpp  attendhistorydto.h  gitignore.txt  main.cpp  qmlimageutils.cpp  qmlimageutils.h  registerface.cpp  registerface.h  registerinfodto.cpp  registerinfodto.h  resources.qrc  utils.h  videoanalyzer.cpp  videoanalyzer.h
core/: ConfigManager.cpp  ConfigManager.h  VectorSearch.cpp  VectorSearch.h  dbHelper.cpp  dbHelper.h  snowflake.hpp
qml/: AttendHistory.qml  AttendInfo.qml  AttendInfo2.qml  CameraManager.qml  Main.qml  MainPage.qml  RegisterInfos.qml  RegisterPage.qml  Settings.qml
schema/: schema.h
src/: CameraDecoder.cpp  CameraDecoder.h  CameraManager.cpp  CameraManager.h  FaceDetector.cpp  FaceDetector.h  FrameData.h  LocalCamera.cpp  LocalCamera.h  ThreadSafeQueue.h  VideoProcessor.cpp  VideoProcessor.h  main.cpp
src/providers/: CameraImageProvider.cpp  CameraImageProvider.h  FaceDetectionResultProvider.cpp  FaceDetectionResultProvider.h
src/workers/: CameraDecodeWorker.cpp  CameraDecodeWorker.h  FaceDetectionWorker.cpp  FaceDetectionWorker.h  WorkerBase.cpp  WorkerBase.h
task/: ClearOldAttendInfoTask.cpp  ClearOldAttendInfoTask.h  ScheduledTask.cpp  ScheduledTask.h  Scheduler.cpp  Scheduler.h
workers/: FaceDetectionWorker.cpp  FaceDetectionWorker.h  FaceRecognizerWorker.cpp  FaceRecognizerWorker.h
